syntax = "proto3";

package asign02;

option java_multiple_files = true;
option java_package = "com.example.model.asign02";


message Request{
  int32 number = 1;
}
enum ErrorCode{
  ABOVE_20 = 0;
  BELOW_2 = 1;
}
message SuccessResponse{
  int32 result = 1;
}
message ErrorResponse{
  int32 input = 1;
  ErrorCode error_code = 2;
}
message Response{
  oneof response {
    SuccessResponse success_response = 1;
    ErrorResponse error_response = 2;
  }
}
service CalculatorService{
  rpc findSquare(Request) returns (Response);

  rpc findSquareBiDirection(stream Request) returns (stream Response);
}
